--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "pithyone/wechat",
+    "name": "sinoktv/wechat",
     "description": "企业微信SDK",
     "type": "library",
     "license": "MIT",
